fix misalignment texts

--- a/packages/frontend/styles/main.css
+++ b/packages/frontend/styles/main.css
@@ -139,6 +139,13 @@
             comic-border-mini
             hover:comic-border
             active:shadow-[inset_4px_5px_0px_#101112]
+            transform
+            hover:translate-x-[-2px]
+            hover:translate-y-[-2px]
+            active:hover:transform-none
+            transition-all
+            active:disabled:hover:transform-none
+            disabled:transform-none
     }
 
     .base-btn-with-icon-small {
@@ -158,6 +165,12 @@
             comic-border-mini
             hover:comic-border
             active:shadow-[inset_4px_5px_0px_#101112]
+            transform
+            hover:translate-x-[-2px]
+            hover:translate-y-[-2px]
+            active:hover:transform-none
+            transition-all
+            disabled:transform-none
     }
 
     .base-btn-with-icon-medium {
@@ -177,6 +190,12 @@
             comic-border-lg
             hover:comic-border-xl
             active:shadow-[inset_8px_8px_0px_#101112]
+            transform
+            hover:translate-x-[-1px]
+            hover:translate-y-[-1px]
+            active:hover:transform-none
+            transition-all
+            disabled:transform-none
     }
 
     .base-icon-btn {
@@ -227,6 +246,12 @@
             comic-border-mini
             hover:comic-border
             active:shadow-[inset_4px_5px_0px_#101112]
+            transform
+            hover:translate-x-[-2px]
+            hover:translate-y-[-2px]
+            active:hover:transform-none
+            transition-all
+            disabled:transform-none
     }
 
     .base-icon-btn-large {
@@ -236,6 +261,12 @@
             comic-border-mini
             hover:comic-border
             active:shadow-[inset_4px_5px_0px_#101112]
+            transform
+            hover:translate-x-[-2px]
+            hover:translate-y-[-2px]
+            active:hover:transform-none
+            transition-all
+            disabled:transform-none
     }
 
 }
